weiter mit preparation

--- a/RStudio/NotebookDatenVerstehen.Rmd
+++ b/RStudio/NotebookDatenVerstehen.Rmd
@@ -6,7 +6,7 @@ output: html_notebook
 library(dplyr)
 library(ggplot2)
 library(readr)
-
+library(stringr)
 
 
 training <- read_csv("C:/Users/fvoss/Google Drive/Uni_5_Semester/Studienarbeit/training.csv", 
@@ -318,36 +318,59 @@ Viele fangen mit "2D" oder "4D" an, was die Anzahl der Türen beschreibt. Dies m
 ```{r}
 
 filteredData <- filteredData %>%
-  mutate(Doors = case_when(grepl("2D",filteredData$SubModel)~"2D",
-                           grepl("4D",filteredData$SubModel)~"4D"))
+  mutate(Doors = str_extract(SubModel, "[0-9]+D"))
 
-filteredData$SubModel <- gsub( "2D ", "", filteredData$SubModel)
-filteredData$SubModel <- gsub( "4D ", "", filteredData$SubModel)
+filteredData$SubModel <- gsub( "[0-9]+D", "", filteredData$SubModel)
 
 ```
 
 
 Weiter enthält das Attribut "Model" noch Informationen über Zwei- bzw. Vierradantrieb, sowie über die Anzahl der Zylinder.
 ```{r}
-filteredData <- filteredData %>%
-  mutate(Cylinder = case_when(grepl("2C",filteredData$Model)~"2C",
-                           grepl("3C",filteredData$Model)~"3C",
-                           grepl("4C",filteredData$Model)~"4C",
-                           grepl("5C",filteredData$Model)~"5C",
-                           grepl("6C",filteredData$Model)~"6C",
-                           grepl("V6",filteredData$Model)~"V6",
-                           grepl("V8",filteredData$Model)~"V8",
-                           ))
 
-filteredData$Model <- gsub( "2C", "", filteredData$SubModel)
-filteredData$Model <- gsub( "3C", "", filteredData$SubModel)
-filteredData$Model <- gsub( "4C", "", filteredData$SubModel)
-filteredData$Model <- gsub( "5C", "", filteredData$SubModel)
-filteredData$Model <- gsub( "6C", "", filteredData$SubModel)
-filteredData$Model <- gsub( "V6", "", filteredData$SubModel)
-filteredData$Model <- gsub( "V8", "", filteredData$SubModel)
+filteredData <- filteredData %>%
+  mutate(Cylinder = str_extract(Model, c("[0-9]+C","V+[0-9]")))
+
+filteredData$Model <- gsub( "[0-9]+\\C", "", filteredData$Model)
+filteredData$Model <- gsub( "V+[0-9]", "", filteredData$Model)
 
 ```
 
 Filtere 3.7L mit Regex
+```{r}
+
+filteredData <- filteredData %>%
+  mutate(Liter = str_extract(SubModel, "[0-9]+\\.[0-9]+L"))%>%
+  mutate(Liter2 = str_extract(Model, "[0-9]+\\.[0-9]+L"))
+
+filteredData$Liter <- ifelse(is.na(filteredData$Liter), filteredData$Liter2, filteredData$Liter)
+
+filteredData <- filteredData %>%
+  select(-Liter2)
+
+
+filteredData$SubModel <- gsub( "[0-9]+\\.[0-9]+L", "", filteredData$SubModel)
+filteredData$Model <- gsub( "[0-9]+\\.[0-9]+L", "", filteredData$Model)
+```
+
+Filtere FWD / 4WD / 2WD
+
+```{r}
+filteredData <- filteredData %>%
+  mutate(WheelDrive = str_extract(Model, "([2-4]|F|A)+WD"))
+
+filteredData$Model <- gsub( "([2-4]|F)+WD", "", filteredData$Model)
+
+```
+
+
+Entferne überflüssige Leerzeichen aus den manipulierten Zeilen
+```{r}
+filteredData$Model <- str_squish(filteredData$Model)
+
+filteredData$SubModel <- str_squish(filteredData$SubModel)
+
+```
+
+
 
