--- a/RStudio/NotebookDatenVerstehen.Rmd
+++ b/RStudio/NotebookDatenVerstehen.Rmd
@@ -430,15 +430,26 @@ testData <- read_csv("C:/Users/fvoss/Google Drive/Uni_5_Semester/Studienarbeit/t
         VehBCost = col_number(), IsOnlineSale = col_number(), 
         WarrantyCost = col_number()))
 
+nrow(testData)
 
-testData <- testData %>%
-  filter(SubModel != "NULL")%>%
-  filter(Color != "NULL")%>%
-  filter(Transmission != "NULL")%>%
-  filter(WheelType != "NULL")%>%
-  filter(Nationality != "NULL")%>%
-  filter(Size != "NULL")%>%
-  filter(TopThreeAmericanName != "NULL")
+testData$SubModel <- gsub( "NULL", "UNKNOWN", testData$SubModel)
+testData$Color <- gsub( "NULL", "UNKNOWN", testData$Color)
+testData$Transmission <- gsub( "NULL", "UNKNOWN", testData$Transmission)
+testData$WheelType <- gsub( "NULL", "UNKNOWN", testData$WheelType)
+testData$Nationality <- gsub( "NULL", "UNKNOWN", testData$Nationality)
+testData$Size <- gsub( "NULL", "UNKNOWN", testData$Size)
+testData$Trim <- gsub( "NULL", "UNKNOWN", testData$Trim)
+testData$TopThreeAmericanName <- gsub( "NULL", "UNKNOWN", testData$TopThreeAmericanName)
+testData$Model <- gsub( "NULL", "UNKNOWN", testData$Model)
+
+testData$Model[is.na(testData$Model)] <- "UNKNOWN"
+testData$SubModel[is.na(testData$SubModel)] <- "UNKNOWN"
+testData$Trim[is.na(testData$Trim)] <- "UNKNOWN"
+testData$Color[is.na(testData$Color)] <- "UNKNOWN"
+
+
+
+nrow(testData)
 
 testData$MMRAcquisitionAuctionAveragePrice <- as.numeric(as.character(testData$MMRAcquisitionAuctionAveragePrice))
 testData$MMRAcquisitionAuctionCleanPrice <- as.numeric(as.character(testData$MMRAcquisitionAuctionCleanPrice))
@@ -450,32 +461,33 @@ testData$MMRCurrentRetailAveragePrice <- as.numeric(as.character(testData$MMRCur
 testData$MMRCurrentRetailCleanPrice <- as.numeric(as.character(testData$MMRCurrentRetailCleanPrice))
 
 
+testData$MMRAcquisitionAuctionAveragePrice[is.na(testData$MMRAcquisitionAuctionAveragePrice)] <- 0
+testData$MMRAcquisitionAuctionCleanPrice[is.na(testData$MMRAcquisitionAuctionCleanPrice)] <- 0
+testData$MMRAcquisitionRetailAveragePrice[is.na(testData$MMRAcquisitionRetailAveragePrice)] <- 0
+testData$MMRAcquisitonRetailCleanPrice[is.na(testData$MMRAcquisitonRetailCleanPrice)] <- 0
+testData$MMRCurrentAuctionAveragePrice[is.na(testData$MMRCurrentAuctionAveragePrice)] <- 0
+testData$MMRCurrentAuctionCleanPrice[is.na(testData$MMRCurrentAuctionCleanPrice)] <- 0
+testData$MMRCurrentRetailAveragePrice[is.na(testData$MMRCurrentRetailAveragePrice)] <- 0
+testData$MMRCurrentRetailCleanPrice[is.na(testData$MMRCurrentRetailCleanPrice)] <- 0
+
+
+
+
+nrow(testData)
 testData <- testData %>%
-  select(-RefId, -WheelTypeID, -BYRNO, -PRIMEUNIT, -AUCGUART, -VNZIP1)
+  select(-WheelTypeID, -BYRNO, -PRIMEUNIT, -AUCGUART, -VNZIP1)
 
 na.omit(testData)
+nrow(testData)
 
+```
+Passe die Trainingsdaten an, sodass ein 80 - 20 Split entsteht
 
-testData <- testData %>%
-  filter(SubModel != "NULL")%>%
-  filter(Color != "NULL")%>%
-  filter(Transmission != "NULL")%>%
-  filter(WheelType != "NULL")%>%
-  filter(Nationality != "NULL")%>%
-  filter(Size != "NULL")%>%
-  filter(Trim != "NULL")%>%
-  filter(TopThreeAmericanName != "NULL")%>%
-  filter(MMRAcquisitionAuctionAveragePrice > 0)%>%
-  filter(MMRAcquisitionAuctionCleanPrice > 0)%>%
-  filter(MMRAcquisitionRetailAveragePrice > 0)%>%
-  filter(MMRAcquisitonRetailCleanPrice > 0)%>%
-  filter(MMRCurrentAuctionAveragePrice > 0)%>%
-  filter(MMRCurrentAuctionCleanPrice > 0)%>%
-  filter(MMRCurrentRetailAveragePrice > 0)%>%
-  filter(MMRCurrentRetailCleanPrice > 0)
-
-
-(grep("NULL", testData))
+```{r}
+library(caret)
+training_rows <- createDataPartition(y=modelData$IsBadBuy, p=0.5, list=FALSE)
+data_training <- slice(modelData, training_rows)
+data_validation <- slice(modelData, -training_rows)
 ```
 
 
@@ -485,44 +497,73 @@ MODELLING
 
 
 ```{r}
-rf_01 <- ranger(IsBadBuy ~ ., data = modelData, importance = "impurity", probability = TRUE, seed=42, num.trees = 1000)
+rf_01 <- ranger(IsBadBuy ~ ., data = data_training, importance = "impurity", probability = TRUE, mtry = 20, seed=42, num.trees = 2000)
 print(rf_01)
 
 ```
 Mache Vorhersagen
 
 ```{r}
-predictions_validation_01 <- predict(rf_01, data = modelData, type = "response")$predictions[,2]
+
+predictions_validation_01 <- predict(rf_01, data = data_validation, type = "response")$predictions[,2]
 head(predictions_validation_01)
+predictions_validation_binary_01 <- ifelse(predictions_validation_01>0.6, "1" ,"0")
 
-predictions_validation_binary_01 <- ifelse(predictions_validation_01>0.5,"1","0")
+data_validation_w_preds_01 <- cbind(data_validation, predictions_validation_01, predictions_validation_binary_01)
+#1-ce(actual = data_validation_w_preds_01$IsBadBuy, predicted = data_validation_w_preds_01$predictions_validation_binary_01)
+library(pROC)
+rf_01_roc <- roc(data_validation_w_preds_01$IsBadBuy, data_validation_w_preds_01$predictions_validation_01)
+plot.roc(rf_01_roc)
+auc(rf_01_roc)
 
-data_validation_w_preds_01 <- cbind(modelData, predictions_validation_01, predictions_validation_binary_01)
 
-table(data_validation_w_preds_01$predictions_validation_binary_01)
-library(Metrics)
+```
+Analyze Predictions
 
-1-ce(actual = data_validation_w_preds_01$IsBadBuy, predicted = data_validation_w_preds_01$predictions_validation_binary_01)
+```{r}
+anaData <- data_validation_w_preds_01 %>%
+  group_by(IsBadBuy)%>%
+  summarise(mean(predictions_validation_01))
+
+anaData <- data_validation_w_preds_01 %>%
+  filter(IsBadBuy != predictions_validation_binary_01)
+
+nrow(anaData)
+(nrow(anaData) / nrow(data_validation))
+anaData <- anaData %>%
+  select(IsBadBuy, predictions_validation_01, predictions_validation_binary_01)%>%
+  group_by(IsBadBuy)%>%
+  count(IsBadBuy)
+
+
 ```
 
 
-Pass an, sodass Trainingsdaten auch gesplittet werden und hier evaluiert werden können
 
-library(Metrics)
+PREDICT ON TEST DATA
 
-1-ce(actual = data_validation_w_preds_01$IsBadBuy, predicted = data_validation_w_preds_01$predictions_validation_binary_01)
+```{r}
+predictions_validation_01 <- predict(rf_01, data = testData, type = "response")$predictions[,2]
+head(predictions_validation_01)
+predictions_validation_binary_01 <- ifelse(predictions_validation_01>0.6,"1","0")
 
-CrossTable(data_validation_w_preds_01$Decision, data_validation_w_preds_01$predictions_validation_binary_01, 
-           prop.r=FALSE, prop.c=FALSE, prop.t=TRUE, prop.chisq=FALSE)
-           
-           
+data_validation_w_preds_01 <- cbind(testData, predictions_validation_01, predictions_validation_binary_01)
+```
 
+Benenne um und entferne unnötige Variablen
 
+```{r}
+submission <- data_validation_w_preds_01 %>%
+  rename(IsBadBuy = predictions_validation_binary_01)%>%
+  select(RefId, IsBadBuy)
+nrow(submission)
 
+```
+Speichere in CSV
 
-
-
-
+```{r}
+write.csv(submission,"submission.csv", row.names = FALSE)
+```
 
 
 
