--- a/RStudio/NotebookDatenVerstehen.Rmd
+++ b/RStudio/NotebookDatenVerstehen.Rmd
@@ -414,16 +414,6 @@ modelData <- filteredDataBalanced
 
 ```
 
-One Hot Encoding
------------ HJier weiter machen
-```{r}
-#library(mltools)
-#library(data.table)
-
-
-#modelData <- one_hot(as.data.table(modelData))
-```
-
 
 
 
@@ -431,18 +421,18 @@ Make Ranger Tuning Stuff
 ```{r}
 library(tuneRanger)
 
-#tuneData <- modelData[sample(nrow(modelData), 500),]
+tuneData <- modelData[sample(nrow(modelData), 5000),]
 
-#tuneData.task = makeClassifTask(data = tuneData, target = "IsBadBuy")
+tuneData.task = makeClassifTask(data = tuneData, target = "IsBadBuy")
 
 
-#estimateTimeTuneRanger(tuneData.task)
+estimateTimeTuneRanger(tuneData.task)
 
-#res = tuneRanger(tuneData.task,
-#                 measure = list(auc),
-#                 tune.parameters = c("mtry", "min.node.size"),
-#                 num.trees = 1000
-#                 )
+res = tuneRanger(tuneData.task,
+                 measure = list(auc),
+                 tune.parameters = c("mtry", "min.node.size", "sample.fraction"),
+                 num.trees = 1000
+                 )
 ```
 
 
@@ -585,7 +575,7 @@ Mache Vorhersagen
 
 ```{r}
 
-predictions_validation_01 <- predict(rf_01, data = data_validation, type = "response")$predictions[,2]
+predictions_validation_01 <- predict(res$model$learner.model, data = data_validation, type = "response")$predictions[,2]
 head(predictions_validation_01)
 predictions_validation_binary_01 <- ifelse(predictions_validation_01>0.5, "1" ,"0")
 
